--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 addopts = -W error --black --timeout=45 --tb=native --cov=src --cov-report=html --junitxml=report.xml
 markers = slow: This is a slow test.
 testpaths = src
+junit_family=xunit2
