--- a/versions.cfg
+++ b/versions.cfg
@@ -28,12 +28,12 @@ mock = 3.0.5
 more-itertools = 7.2.0
 pathlib2 = 2.3.4
 pkginfo = 1.5.0.1
-pluggy = 0.12.0
+pluggy = 0.13.1
 pycodestyle = 2.5.0
 pyflakes = 2.1.1
 pyparsing = 2.4.2
 pyroma = 2.5
-pytest = 5.2.1
+pytest = 6.1.2
 pytest-cache = 1.0
 pytest-codecheckers = 0.2
 pytest-cov = 2.7.1
@@ -49,12 +49,12 @@ wheel = 0.33.6
 zc.recipe.egg = 2.0.7
 zest.releaser = 6.19.1
 zipp = 0.6.0
-pytest-flake8 = 1.0.4
+pytest-flake8 = 1.0.6
 recommonmark = 0.6.0
 commonmark = 0.9.1
 # Required by:
 # batou==1.12.0.dev0
-Jinja2 = 2.10.1
+Jinja2 = 2.11.2
 
 # Required by:
 # zest.releaser==6.19.1
@@ -79,7 +79,7 @@ pep8 = 1.7.1
 
 # Required by:
 # batou==1.12.0.dev0
-py = 1.8.0
+py = 1.8.2
 
 # Required by:
 # batou==1.12.0.dev0
@@ -128,3 +128,7 @@ wcwidth = 0.1.7
 # Required by:
 # bleach==3.1.0
 webencodings = 0.5.1
+
+# Required by:
+# pytest==6.1.2
+iniconfig = 1.1.1
