relax test finding filter so we get tests from sub-packages, too

--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ skip_missing_interpreters = true
 [testenv]
 usedevelop = true
 extras = test
-commands = pytest src/batou/tests {posargs}
+commands = pytest src/batou {posargs}
