--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -28,4 +29,4 @@ jobs:
           python3 -m venv .
           bin/pip install zc.buildout
           bin/buildout
-          bin/pytest
+          bin/tox
