--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ eggs = batou
        pytest-black
        pytest-cov
        pytest-timeout
+       tox
 interpreter = py
 dependent-scripts = true
 
