--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          python3 -m venv .
-          bin/pip install zc.buildout
-          bin/buildout
+          ./develop.sh
           bin/tox
 
       - name: Rocket.Chat Notification
