--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -W error --black --timeout=45 --tb=native --cov=src --cov-report=html --junitxml=report.xml
+addopts = -W error --timeout=45 --tb=native --cov=src --cov-report=html --junitxml=report.xml
 markers = slow: This is a slow test.
 testpaths = src
 junit_family=xunit2
