debugging for the github actions environment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Setup
         run: ./develop.sh
 
+      - name: Show environment
+        run: set
+
       - name: Test
         run: bin/tox
 
