supervisor: rework supervisor check, remove nagiosplugin dependency

--- a/examples/django/environments/dev.cfg
+++ b/examples/django/environments/dev.cfg
@@ -2,7 +2,10 @@
 connect_method = local
 
 [hosts]
-localhost = django, supervisor
+localhost = django, supervisor, nagiosserver
 
 [vfs]
 sandbox = Developer
+
+[component:supervisor]
+nagios = True
