--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
         run: ./develop.sh
 
       - name: Show environment
-        run: set
+        run: |
+          git config --global user.email "test@example.com"
+          git config --global user.name "Ms. U. Test"
 
       - name: Test
         run: bin/tox
