--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
         run: ./develop.sh
 
       - name: Show environment
-        run: |
-          git config --global user.email "test@example.com"
-          git config --global user.name "Ms. U. Test"
+        run: set
 
       - name: Test
         run: bin/tox
