add yapf styling rules

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
 [upload_sphinx]
 upload-dir = build/doc
+
+[yapf]
+column_limit = 79
+split_before_expression_after_opening_paren = true
+split_before_closing_bracket = false
