--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         run: bin/tox
 
       - name: Rocket.Chat Notification
+        continue-on-error: true
         uses: RocketChat/Rocket.Chat.GitHub.Action.Notification@master
         if: always()
         with:
