Try enabling Python 3.10 support in github actions / tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py36, py37, py38, py39, pre-commit
+    py36, py37, py38, py39, python3.10, pre-commit
 skip_missing_interpreters = true
 allowlist_externals=git
 
@@ -10,7 +10,6 @@ setenv =
     APPENV_BEST_PYTHON = {envpython}
 extras = test
 commands = pytest {posargs}
-
 
 [testenv:pre-commit]
 basepython = python3.9
