--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,12 +8,13 @@ nodeenv==1.5.0
 packaging==20.4
 pluggy==0.13.1
 pre-commit==2.15.0
-py==1.10.0
+py==1.11.0
 pyparsing==2.4.7
-PyYAML==5.3.1
-six==1.15.0
+PyYAML==5.4
+six==1.16.0
 toml==0.10.2
 tox==3.20.1
 virtualenv==20.1.0
 sphinx==4.0.2
 recommonmark==0.7.1
+setuptools==56.2
