--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     py36, py37, py38, py39, pre-commit
+    py36, py37, py38, py39, py310, py311, pre-commit
 skip_missing_interpreters = true
 allowlist_externals=git
 
@@ -11,6 +12,11 @@ setenv =
 extras = test
 commands = pytest {posargs}
 
+[testenv:py310]
+basepython = python3.10
+
+[testenv:py311]
+basepython = python3.11
 
 [testenv:pre-commit]
 basepython = python3.9
