Grrr. Keep poking tox to pick up my Python 3.10 locally properly.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,9 @@ setenv =
 extras = test
 commands = pytest {posargs}
 
+[testenv:py3.10]
+basepython = python3.10
+
 [testenv:pre-commit]
 basepython = python3.9
 description = This env runs all linters configured in .pre-commit-config.yaml
