document how to run test suite without mercurial
As not everybody has mercurial installed, now you can run the test suite
with `tox - e skip-mercurial`.

--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,21 @@ skip_missing_interpreters = true
 allowlist_externals=git
 
 [testenv]
+description = run the test suite with pytest
 usedevelop = true
 extras = test
 commands = pytest src/batou {posargs}
 
-
 [testenv:pre-commit]
-basepython = python3.9
 description = This env runs all linters configured in .pre-commit-config.yaml
+basepython = python3.9
 skip_install = true
 deps =
     pre-commit
 commands =
     pre-commit run --all-files --show-diff-on-failure
+
+[testenv:skip-mercurial]
+description = run test suite with the exception of tests for mercurial
+baseython = python3.9
+commands = pytest --ignore=src/batou/lib/tests/test_mercurial.py src/batou {posargs}
