--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+-e .
 appdirs==1.4.4
 cfgv==3.2.0
 distlib==0.3.1
@@ -14,3 +15,5 @@ six==1.15.0
 toml==0.10.2
 tox==3.20.1
 virtualenv==20.1.0
+sphinx==4.0.2
+recommonmark==0.7.1
