Implement dynamic host name mapping for provisioners.
Fix tests after refactorings.

--- a/examples/tutorial-provision-container/environments/dev/environment.cfg
+++ b/examples/tutorial-provision-container/environments/dev/environment.cfg
@@ -5,6 +5,7 @@ repository_root = ../..
 
 [host:mycontainer]
 components = hello
+provision-dynamic-hostname = True
 
 [provisioner:default]
 method = fc-nixos-dev-container
