--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,7 @@
-include LICENSE.txt
-include README
-include CHANGES.txt
-include src/batou/version.txt
-include src/batou/requirements.txt
-include src/batou/bootstrap-template
+include src/batou/insecure-private.key
 recursive-include src/batou/init-template *
 recursive-include src/batou/tests/fixture *
 recursive-include src/batou/lib/resources *
+recursive-include . *.txt
+recursive-include . *.in
+recursive-include . *.md
