--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ allowlist_externals=git
 
 [testenv]
 usedevelop = true
+setenv =
+    APPENV_BEST_PYTHON = {envpython}
 extras = test
 commands = pytest src/batou {posargs}
 
