Move closing parentheses to the next line.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,6 @@ upload-dir = build/doc
 based_on_style = pep8
 column_limit = 79
 split_before_expression_after_opening_paren = true
-split_before_closing_bracket = false
+split_before_closing_bracket = true
 SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = false
 BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
