--- a/examples/errors2/environments/errors.cfg
+++ b/examples/errors2/environments/errors.cfg
@@ -2,7 +2,7 @@
 connect_method = local
 
 [hosts]
-localhost = component1, component2, component3, component4, cycle1, cycle2, dnsproblem, crontab
+localhost = component1, component2, component3, component4, cycle1, cycle2, dnsproblem, crontab, filemode
 
 [component:component1]
 do_what_is_needed = false
