Fail if an attribute is set both in environment and via secrets.
Fixes #28.

--- a/examples/errors/environments/errors.cfg
+++ b/examples/errors/environments/errors.cfg
@@ -6,6 +6,7 @@ localhost = component1, component2, component3, component4, missingcomponent, cy
 
 [component:component1]
 do_what_is_needed = false
+my_attribute = set in environment
 
 [component:component2]
 this_does_not_exist = True
