dev-container: improve sample to include alias-based local resolving
also update to a current fc-nixos channel

--- a/examples/tutorial-provision-container/environments/dev/environment.cfg
+++ b/examples/tutorial-provision-container/environments/dev/environment.cfg
@@ -6,7 +6,12 @@ repository_root = ../..
 [host:mycontainer]
 components = hello
 provision-dynamic-hostname = True
+provision-aliases =
+	my
+	directory
+	api
 
 [provisioner:default]
 method = fc-nixos-dev-container
-host = largo.fcio.net
+host = largo.fcdev.fcio.net
+channel = https://hydra.flyingcircus.io/build/101493/download/1/nixexprs.tar.xz
