--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,13 @@ split_before_expression_after_opening_paren = true
 split_before_closing_bracket = false
 SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = false
 BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
+
+[flake8]
+ignore =
+    # Missing whitespace after ',', ';', or ':' -- enforced by yapf config
+    E231
+    # Line break occurred before a binary operator -- enforced by yapf config
+    W503
+    # Line break occurred after a binary operator -- enforced by yapf config
+    W504
+max-line-length = 80
