--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ based_on_style = pep8
 column_limit = 79
 split_before_expression_after_opening_paren = true
 split_before_closing_bracket = false
-SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = false
+SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = true
 BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
 
 [flake8]
@@ -18,3 +18,7 @@ ignore =
     # Line break occurred after a binary operator -- enforced by yapf config
     W504
 max-line-length = 80
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = true
