provisioning/devhost: a bundle of improvements
* automatically pick up either provision.sh and/or provision.nix
  (no need to define a COPY command for provision nix any longer)
* warn if neither provision.nix nor provision.sh are given
* continue deployments on failure during provisioning fc-manage
  but be more explicit about warning that something is fishy.

--- a/examples/tutorial-provision-container/environments/dev/environment.cfg
+++ b/examples/tutorial-provision-container/environments/dev/environment.cfg
@@ -14,4 +14,5 @@ provision-aliases =
 [provisioner:default]
 method = fc-nixos-dev-container
 host = largo.fcdev.fcio.net
-channel = https://hydra.flyingcircus.io/build/101493/download/1/nixexprs.tar.xz
+# 21.05 production release 2021_038
+channel = https://hydra.flyingcircus.io/channel/custom/platform-prs/pr-431/release
