provisioning/devhost: fix switching hosts from dynamic to static

--- a/examples/tutorial-provision-container/environments/dev/environment.cfg
+++ b/examples/tutorial-provision-container/environments/dev/environment.cfg
@@ -15,4 +15,4 @@ provision-aliases =
 method = fc-nixos-dev-container
 host = largo.fcdev.fcio.net
 # 21.05 production release 2021_038
-channel = https://hydra.flyingcircus.io/channel/custom/platform-prs/pr-431/release
+channel = https://hydra.flyingcircus.io/build/117243/download/1/nixexprs.tar.xz
