utils/Address: improve the dual stack resolver
This allows a ternary option for required/unwanted/optional to deal
more cleanly with different situations.

We also allow switching the per-environment default from
v4=True/v6=False back to v4=True/v6=optional to avoid having to rewrite
older environments that rely on this while still introducing new
projects to the new settings by default and also suggesting that others
should upgrade eventually.

Fixes #270

--- a/src/batou/tests/fixture/sample_service/environments/test-with-env-config/environment.cfg
+++ b/src/batou/tests/fixture/sample_service/environments/test-with-env-config/environment.cfg
@@ -4,6 +4,9 @@ service_user = joe
 host_domain = example.com
 branch = release
 
+require_v6 = True
+require_v4 = optional
+
 [host:foo1]
 service_user = bob
 components = hello
