--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
         # These are non-anchored regular rexpressions
-        exclude: "(encrypted.cfg|secrets.cfg|secret-foobar.yaml)"
+        exclude: ^(.*/encrypted.cfg|.*/secrets.cfg|.*/secret-foobar.yaml|.*\.age|.*\.gpg)
     -   id: check-added-large-files
     -   id: check-json
     -   id: check-xml
