--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -5,13 +5,14 @@ versions = versions
 allow-picked-versions = false
 
 [versions]
-setuptools = 50.3.2
+setuptools = 68.0.0
 meld3 = 2.0.1
 nagiosplugin = 1.3.2
 superlance = 1.0
 supervisor = 4.2.1
-zc.buildout = 2.13.3
+zc.buildout = 3.0.1
 zc.recipe.egg = 2.0.7
+wheel = 0.40.0
 
 [nagiosplugin]
 recipe = zc.recipe.egg
