--- a/examples/errors2/environments/secretserror/environment.cfg
+++ b/examples/errors2/environments/secretserror/environment.cfg
@@ -2,3 +2,7 @@
 connect_method = local
 
 [hosts]
+# this is a file without hosts
+# to trigger an error that happened
+# when the secrets define values for
+# a host that does not exist
