Add attribute expansion error

--- a/examples/errors2/environments/errors/environment.cfg
+++ b/examples/errors2/environments/errors/environment.cfg
@@ -2,13 +2,16 @@
 connect_method = local
 
 [hosts]
-localhost = component1, component2, component3, component4, cycle1, cycle2, dnsproblem, dnsproblem2, crontab, filemode
+localhost = component1, component2, component3, component4, component5, cycle1, cycle2, dnsproblem, dnsproblem2, crontab, filemode
 
 [component:component1]
 do_what_is_needed = false
 
 [component:component2]
 this_does_not_exist = True
+
+[component:component5]
+attribute_cannot_be_expanded = {{host.aliases.doesnotexist}}
 
 [component:dnsproblem]
 attribute_with_problem = localhost
