run actions on branches, too

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Unit tests
 # events but only for the main branch
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'batou-*' ]
   pull_request:
     branches: [ main, 'batou-*' ]
 
