--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py36, py37, py38, py39, pre-commit
+    py37, py38, py39, py310, py311, pre-commit
 skip_missing_interpreters = true
 allowlist_externals=git
 
