--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,35 +12,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-3_6:
-    strategy:
-      matrix:
-        python-version: [ '3.6' ]
-
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      # Runs a set of commands using the runners shell
-      - name: Setup
-        run: ./develop.sh
-
-      - name: Show environment
-        run: set
-
-      - name: Test
-        run: bin/tox -e py -- -vv
   build:
     strategy:
       matrix:
-        python-version: [ '3.7', '3.8', '3.9' ]
+        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
 
     # The type of runner that the job will run on
     runs-on: ubuntu-22.04
