Update versions in supervisor.buildout.cfg file

--- a/src/batou/lib/resources/supervisor.buildout.cfg
+++ b/src/batou/lib/resources/supervisor.buildout.cfg
@@ -5,14 +5,14 @@ versions = versions
 allow-picked-versions = false
 
 [versions]
-setuptools = {{component.setuptools_version}}
+setuptools = {{component.parent.setuptools_version}}
 meld3 = 2.0.1
 nagiosplugin = 1.3.2
 superlance = 1.0
 supervisor = 4.2.1
-zc.buildout = {{component.buildout_version}}
+zc.buildout = {{component.parent.buildout_version}}
 zc.recipe.egg = 2.0.7
-wheel = {{component.wheel_version}}
+wheel = {{component.parent.wheel_version}}
 
 [nagiosplugin]
 recipe = zc.recipe.egg
