Add release process with changelog support using scriv

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,13 @@ upload-dir = build/doc
 [isort]
 multi_line_output = 3
 include_trailing_comma = true
+
+[tool.scriv]
+format = md
+fragment_directory = CHANGES.d
+output_file = CHANGES.md
+version = unreleased
+entry_title_template =
+new_fragment_template = - New changelog entry.
+insert_marker = - Nothing changed yet.
+categories =
