--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist =
     py37, py38, py39, py310, py311, py312, pre-commit
 skip_missing_interpreters = true
 allowlist_externals=git
+isolated_build = True
+
 
 [testenv]
 usedevelop = true
